--- a/views/add_doctor.hbs
+++ b/views/add_doctor.hbs
@@ -112,7 +112,7 @@
         <h1>Thêm bác sĩ</h1>
         <nav>
             <ol class="breadcrumb">
-                <li class="breadcrumb-item"><a href="/dashboard">Dashboard</a></li>
+                <li class="breadcrumb-item"><a href="/dashboard">Thống kê</a></li>
                 <li class="breadcrumb-item active">Thêm bác sĩ</li>
             </ol>
         </nav>
@@ -166,11 +166,11 @@
                         <label class="label">Giới Tính</label>
                         <div class="input-group">
                             <div class="p-t-10">
-                                <label class="radio-container m-r-45">Male
+                                <label class="radio-container m-r-45">Nam
                                     <input type="radio" checked="checked" value="Nam" name="gender">
                                     <span class="checkmark"></span>
                                 </label>
-                                <label class="radio-container">Female
+                                <label class="radio-container">Nữ
                                     <input type="radio" value="Nữ" name="gender">
                                     <span class="checkmark"></span>
                                 </label>
