--- a/views/listPatients.hbs
+++ b/views/listPatients.hbs
@@ -141,6 +141,39 @@
                 <div class="card">
                     <div class="card-body">
                         <h5 class="card-title">Danh sách bệnh nhân</h5>
+                        <div class="container">
+                            <div class="row align-items-start">
+                                <div class="col">
+                                    <div class="" style="background-color:red;height: 10px;width: 50px">
+                                    </div>
+                                    <div class="col">
+                                        Khẩn cấp
+                                    </div>
+                                </div>
+                                <div class="col">
+                                    <div class="" style="background-color:yellow;height: 10px;width: 50px">
+                                    </div>
+                                    <div class="col">
+                                        Cảnh báo
+                                    </div>
+                                </div>
+                                <div class="col">
+                                    <div class="" style="background-color:deepskyblue;height: 10px;width: 50px">
+                                    </div>
+                                    <div class="col">
+                                        Cần theo dõi
+                                    </div>
+                                </div>
+                                <div class="col">
+                                    <div class="" style="background-color:green;height: 10px;width: 50px">
+                                    </div>
+                                    <div class="col">
+                                        Bình thường
+                                    </div>
+                                </div>
+                            </div>
+
+                        </div>
                         <!-- Table with stripped rows -->
                         <table class="table datatable">
                             <thead>
