--- a/views/profile.hbs
+++ b/views/profile.hbs
@@ -457,7 +457,7 @@
                                                                     data-bs-toggle="collapse"
                                                                     data-bs-target="#collapseOne" aria-expanded="true"
                                                                     aria-controls="collapseOne">
-                                                                {{moment real_time format="YYYY-MM-DD"}}
+                                                                {{moment this.real_time}}
                                                             </button>
                                                         </h2>
                                                         <div id="collapseOne" class="accordion-collapse collapse show"
@@ -534,7 +534,6 @@
                         {{#each device}}
                             {{#each this.heart}}
                             heart.push({{this.value}});
-                            date.push({{moment real_time format="YYYY-MM-DD"}})
                             {{/each}}
                             {{#each this.spO2}}
                             sp02.push({{this.value}});
