[FIX] moment date

--- a/views/listPatients.hbs
+++ b/views/listPatients.hbs
@@ -182,6 +182,7 @@
                                 <th scope="col">Họ Và Tên</th>
                                 <th scope="col">Số điện thoại</th>
                                 <th scope="col">Số Phòng</th>
+                                <th scope="col">Lời khuyên</th>
                                 <th scope="col">Sự kiện</th>
                             </tr>
                             </thead>
@@ -194,6 +195,7 @@
                                 <td>{{this.name}}</td>
                                 <td>{{this.phone}}</td>
                                 <td>{{this.number_room}}</td>
+                                <td>okok</td>
                                 <td>
                                         <div class="card-body">
 
