[FIX] fix loi khuyen

--- a/views/listPatients.hbs
+++ b/views/listPatients.hbs
@@ -195,7 +195,7 @@
                                 <td>{{this.name}}</td>
                                 <td>{{this.phone}}</td>
                                 <td>{{this.number_room}}</td>
-                                <td>okok</td>
+                                <td>Cần máy thở và bác sĩ theo dõi!</td>
                                 <td>
                                         <div class="card-body">
 
@@ -219,6 +219,7 @@
                                     <td>{{this.name}}</td>
                                     <td>{{this.phone}}</td>
                                     <td>{{this.number_room}}</td>
+                                <td>Nhịp tim tăng cao, nồng độ Oxy giảm</td>
                                     <td>
                                         <div class="card-body">
 
@@ -242,6 +243,7 @@
                                     <td>{{this.name}}</td>
                                     <td>{{this.phone}}</td>
                                     <td>{{this.number_room}}</td>
+                                <td>Trạng thái bình thường</td>
                                     <td>
                                         <div class="card-body">
 
@@ -265,6 +267,7 @@
                                     <td>{{this.name}}</td>
                                     <td>{{this.phone}}</td>
                                     <td>{{this.number_room}}</td>
+                                <td>Cần bác sĩ theo dõi lập tức!</td>
                                     <td>
                                         <div class="card-body">
 
