--- a/views/dashboard.hbs
+++ b/views/dashboard.hbs
@@ -43,6 +43,30 @@
                 <span>Thống kê</span>
             </a>
         </li><!-- End Dashboard Nav -->
+<!--        thiết bị-->
+        <li class="nav-item">
+            <a class="nav-link collapsed" data-bs-target="#charts-nav" data-bs-toggle="collapse" href="#">
+                <i class="bi bi-menu-button-wide"></i><span>Thiết bị</span><i class="bi bi-chevron-down ms-auto"></i>
+            </a>
+            <ul id="charts-nav" class="nav-content collapse " data-bs-parent="#sidebar-nav">
+                <li>
+                    <a href="/dashboard-devices">
+                        <i class="bi bi-circle"></i><span>Thống kê thiết bị</span>
+                    </a>
+                </li>
+                <li>
+                    <a href="/adds-devices">
+                        <i class="bi bi-circle"></i><span>Thêm thiết bị</span>
+                    </a>
+                </li>
+                <li>
+                    <a href="/list-devices">
+                        <i class="bi bi-circle"></i><span>Danh sách thiết bị</span>
+                    </a>
+                </li>
+            </ul>
+        </li><!-- End Components Nav -->
+
 
         <li class="nav-item">
             <a class="nav-link collapsed" data-bs-target="#components-nav" data-bs-toggle="collapse" href="#">
