--- a/views/dashboard_device.hbs
+++ b/views/dashboard_device.hbs
@@ -2,7 +2,7 @@
 
     <div class="d-flex align-items-center justify-content-between">
         <a href="/" class="logo d-flex align-items-center">
-            <img src="img/logo.png" alt="">
+            <img src="assets/img/logo.png" alt="">
             <span class="d-none d-lg-block">Hệ thống quản trị</span>
         </a>
         <i class="bi bi-list toggle-sidebar-btn"></i>
@@ -15,9 +15,23 @@
         </form>
     </div><!-- End Search Bar -->
 
+    <nav class="header-nav ms-auto">
+        <ul class="d-flex align-items-center">
+            <li class="nav-item d-block d-lg-none">
+                <a class="nav-link nav-icon search-bar-toggle " href="#">
+                    <i class="bi bi-search"></i>
+                </a>
+            </li><!-- End Search Icon-->
 
+
+
+        </ul>
+    </nav><!-- End Icons Navigation -->
 
 </header><!-- End Header -->
+
+<!-- ======= Sidebar ======= -->
+
 <aside id="sidebar" class="sidebar">
 
     <ul class="sidebar-nav" id="sidebar-nav">
@@ -132,85 +146,75 @@
 
 </aside>
 <main id="main" class="main">
+
     <div class="pagetitle">
-        <h1>Thêm bác sĩ</h1>
-        <nav>
-            <ol class="breadcrumb">
-                <li class="breadcrumb-item"><a href="/dashboard">Thống kê</a></li>
-                <li class="breadcrumb-item active">Thêm bác sĩ</li>
-            </ol>
-        </nav>
-    </div><!-- End Page Title -->
-    <section class="section">
-        <div class="card">
-            <div class="card-body">
-                <h5 class="card-title">Thêm bác sĩ</h5>
-                {{# if success }}
-                    <section class="success">
-                        <h2> </h2>
-                    </section>
-                {{ else }}
-                    {{# if errors }}
-                        <section class="errors">
-                            <ul>
-                                {{# each errors }}
-                                    <li class="alert alert-danger">{{ this.msg }}</li>
-                                {{/each}}
-                            </ul>
-                        </section>
-                    {{/if}}
-                {{/if}}
-                <!-- Vertical Form -->
-                <form class="row g-3" action="/adddoctor" id="application-form" method="post">
-                    <div class="col-12">
-                        <label for="inputNanme4" class="form-label">Username</label>
-                        <div class="input-group has-validation">
-                        <input type="text" name="username" class="form-control" id="inputNanme4" required>
-                        </div>
-                    </div>
-                    <div class="col-12">
-                        <label for="inputEmail4" class="form-label">Password</label>
-                        <div class="input-group has-validation">
-                        <input type="password" name="password" class="form-control" id="inputEmail4" required>
-                        </div>
-                    </div>
-                    <div class="col-12">
-                        <label for="inputPassword4" class="form-label">ID</label>
-                        <div class="input-group has-validation">
-                        <input type="number" name="id" class="form-control" id="inputPassword4" required>
-                        </div>
-                    </div>
-                    <div class="col-12">
-                        <label for="inputAddress" class="form-label">Họ Và Tên</label>
-                        <div class="input-group has-validation">
-                        <input type="text" name="name" class="form-control" id="inputAddress" placeholder="Nguyen Van A" required>
-                        </div>
-                    </div>
-                    <div class="col-2">
-                        <label class="label">Giới Tính</label>
-                        <div class="input-group">
-                            <div class="p-t-10">
-                                <label class="radio-container m-r-45">Nam
-                                    <input type="radio" checked="checked" value="Nam" name="gender">
-                                    <span class="checkmark"></span>
-                                </label>
-                                <label class="radio-container">Nữ
-                                    <input type="radio" value="Nữ" name="gender">
-                                    <span class="checkmark"></span>
-                                </label>
-                            </div>
-                        </div>
-                    </div>
-                    <div class="text-center">
-                        <button type="submit" class="btn btn-primary">Thêm</button>
-                        <button type="reset" class="btn btn-secondary">Đặt lại</button>
-                    </div>
-                </form><!-- Vertical Form -->
+<div class="col-lg-12">
+    <div class="card">
+        <div class="card-body">
+            <h5 class="card-title">Hiện trạng thiết bị</h5>
 
-            </div>
+            <!-- Pie Chart -->
+            <div id="pieChart"></div>
+
+            <script>
+                document.addEventListener("DOMContentLoaded", () => {
+                    new ApexCharts(document.querySelector("#pieChart"), {
+                        series: [44, 55],
+                        chart: {
+                            height: 400,
+                            type: 'pie',
+                            toolbar: {
+                                show: true
+                            }
+                        },
+                        labels: ['Thiết bị đã sử dụng', 'Thiết bị chưa sử dụng']
+                    }).render();
+                });
+            </script>
+            <!-- End Pie Chart -->
+
         </div>
-    </section>
+    </div>
+</div>
 
-</main><!-- End #main -->
+<div class="col-lg-12">
+    <div class="card">
+        <div class="card-body">
+            <h5 class="card-title">Hiện trạng thiết bị</h5>
 
-<!-- ======= Footer ======= -->
+            <!-- Bar Chart -->
+            <div id="barChart"></div>
+
+            <script>
+                document.addEventListener("DOMContentLoaded", () => {
+                    new ApexCharts(document.querySelector("#barChart"), {
+                        series: [{
+                            data: [400, 430, 448, 470, 540]
+                        }],
+                        chart: {
+                            type: 'bar',
+                            height: 350
+                        },
+                        plotOptions: {
+                            bar: {
+                                borderRadius: 4,
+                                horizontal: true,
+                            }
+                        },
+                        dataLabels: {
+                            enabled: false
+                        },
+                        xaxis: {
+                            categories: ['Thiết bị 1','Thiết bị 2','Thiết bị 3','Thiết bị 4','Thiết bị 5'
+                            ],
+                        }
+                    }).render();
+                });
+            </script>
+            <!-- End Bar Chart -->
+
+        </div>
+    </div>
+</div>
+    </div>
+</main>
