--- a/views/table_device.hbs
+++ b/views/table_device.hbs
@@ -18,63 +18,63 @@
 
 
 
-            <!--            <li class="nav-item dropdown pe-3">-->
+    <!--            <li class="nav-item dropdown pe-3">-->
 
-            <!--                <a class="nav-link nav-profile d-flex align-items-center pe-0" href="#" data-bs-toggle="dropdown">-->
-            <!--                    <img src="assets/img/profile-img.jpg" alt="Profile" class="rounded-circle">-->
-            <!--                    <span class="d-none d-md-block dropdown-toggle ps-2">K. Anderson</span>-->
-            <!--                </a>&lt;!&ndash; End Profile Iamge Icon &ndash;&gt;-->
+    <!--                <a class="nav-link nav-profile d-flex align-items-center pe-0" href="#" data-bs-toggle="dropdown">-->
+    <!--                    <img src="assets/img/profile-img.jpg" alt="Profile" class="rounded-circle">-->
+    <!--                    <span class="d-none d-md-block dropdown-toggle ps-2">K. Anderson</span>-->
+    <!--                </a>&lt;!&ndash; End Profile Iamge Icon &ndash;&gt;-->
 
-            <!--                <ul class="dropdown-menu dropdown-menu-end dropdown-menu-arrow profile">-->
-            <!--                    <li class="dropdown-header">-->
-            <!--                        <h6>Kevin Anderson</h6>-->
-            <!--                        <span>Web Designer</span>-->
-            <!--                    </li>-->
-            <!--                    <li>-->
-            <!--                        <hr class="dropdown-divider">-->
-            <!--                    </li>-->
+    <!--                <ul class="dropdown-menu dropdown-menu-end dropdown-menu-arrow profile">-->
+    <!--                    <li class="dropdown-header">-->
+    <!--                        <h6>Kevin Anderson</h6>-->
+    <!--                        <span>Web Designer</span>-->
+    <!--                    </li>-->
+    <!--                    <li>-->
+    <!--                        <hr class="dropdown-divider">-->
+    <!--                    </li>-->
 
-            <!--                    <li>-->
-            <!--                        <a class="dropdown-item d-flex align-items-center" href="users-profile.html">-->
-            <!--                            <i class="bi bi-person"></i>-->
-            <!--                            <span>My Profile</span>-->
-            <!--                        </a>-->
-            <!--                    </li>-->
-            <!--                    <li>-->
-            <!--                        <hr class="dropdown-divider">-->
-            <!--                    </li>-->
+    <!--                    <li>-->
+    <!--                        <a class="dropdown-item d-flex align-items-center" href="users-profile.html">-->
+    <!--                            <i class="bi bi-person"></i>-->
+    <!--                            <span>My Profile</span>-->
+    <!--                        </a>-->
+    <!--                    </li>-->
+    <!--                    <li>-->
+    <!--                        <hr class="dropdown-divider">-->
+    <!--                    </li>-->
 
-            <!--                    <li>-->
-            <!--                        <a class="dropdown-item d-flex align-items-center" href="users-profile.html">-->
-            <!--                            <i class="bi bi-gear"></i>-->
-            <!--                            <span>Account Settings</span>-->
-            <!--                        </a>-->
-            <!--                    </li>-->
-            <!--                    <li>-->
-            <!--                        <hr class="dropdown-divider">-->
-            <!--                    </li>-->
+    <!--                    <li>-->
+    <!--                        <a class="dropdown-item d-flex align-items-center" href="users-profile.html">-->
+    <!--                            <i class="bi bi-gear"></i>-->
+    <!--                            <span>Account Settings</span>-->
+    <!--                        </a>-->
+    <!--                    </li>-->
+    <!--                    <li>-->
+    <!--                        <hr class="dropdown-divider">-->
+    <!--                    </li>-->
 
-            <!--                    <li>-->
-            <!--                        <a class="dropdown-item d-flex align-items-center" href="pages-faq.html">-->
-            <!--                            <i class="bi bi-question-circle"></i>-->
-            <!--                            <span>Need Help?</span>-->
-            <!--                        </a>-->
-            <!--                    </li>-->
-            <!--                    <li>-->
-            <!--                        <hr class="dropdown-divider">-->
-            <!--                    </li>-->
+    <!--                    <li>-->
+    <!--                        <a class="dropdown-item d-flex align-items-center" href="pages-faq.html">-->
+    <!--                            <i class="bi bi-question-circle"></i>-->
+    <!--                            <span>Need Help?</span>-->
+    <!--                        </a>-->
+    <!--                    </li>-->
+    <!--                    <li>-->
+    <!--                        <hr class="dropdown-divider">-->
+    <!--                    </li>-->
 
-            <!--                    <li>-->
-            <!--                        <a class="dropdown-item d-flex align-items-center" href="#">-->
-            <!--                            <i class="bi bi-box-arrow-right"></i>-->
-            <!--                            <span>Sign Out</span>-->
-            <!--                        </a>-->
-            <!--                    </li>-->
+    <!--                    <li>-->
+    <!--                        <a class="dropdown-item d-flex align-items-center" href="#">-->
+    <!--                            <i class="bi bi-box-arrow-right"></i>-->
+    <!--                            <span>Sign Out</span>-->
+    <!--                        </a>-->
+    <!--                    </li>-->
 
-            <!--                </ul>&lt;!&ndash; End Profile Dropdown Items &ndash;&gt;-->
-            <!--            </li>&lt;!&ndash; End Profile Nav &ndash;&gt;-->
+    <!--                </ul>&lt;!&ndash; End Profile Dropdown Items &ndash;&gt;-->
+    <!--            </li>&lt;!&ndash; End Profile Nav &ndash;&gt;-->
 
-        </ul>
+    </ul>
     </nav><!-- End Icons Navigation -->
 
 </header><!-- End Header -->
@@ -201,7 +201,7 @@
         <nav>
             <ol class="breadcrumb">
                 <li class="breadcrumb-item"><a href="/dashboard">Dashboard</a></li>
-                <li class="breadcrumb-item">Danh sách bác sĩ</li>
+                <li class="breadcrumb-item">Danh sách thiết bị</li>
             </ol>
         </nav>
     </div><!-- End Page Title -->
@@ -212,32 +212,31 @@
 
                 <div class="card">
                     <div class="card-body">
-                        <h5 class="card-title">Danh sách bác sĩ</h5>
+                        <h5 class="card-title">Danh sách thiết bị</h5>
                         <!-- Table with stripped rows -->
                         <table class="table datatable">
                             <thead>
                             <tr>
-                                <th scope="col">ID</th>
-                                <th scope="col">Họ Và Tên</th>
-                                <th scope="col">Giới tính</th>
-                                <th scope="col">Trạng Thái</th>
+                                <th scope="col">Tên thiết bị</th>
+                                <th scope="col">Key thiết bị</th>
+                                <th scope="col">Hiện trạng</th>
                             </tr>
                             </thead>
-                        <tbody>
-{{#each docs}}
+                            <tbody>
+                            {{#each docs}}
 
-                            <tr>
-                                <td>{{this.id}}</td>
-                                <td>{{this.name}}</td>
-                                <td>{{this.gender}}</td>
-                                {{#if this.state}}
-                                                                                <td><a href="#" class="btn btn-success">Đang rảnh</a></td>
-                                                                                {{else}}
-                                                                                    <td><a href="#" class="btn btn-danger">Đang bận</a></td>{{/if}}
-                            </tr>
+                                <tr>
+                                    <td>{{this.id}}</td>
+                                    <td>{{this.name}}</td>
+                                    <td><a href="#" class="btn btn-success">Đang sử dụng</a></td>
+<!--                                    {{#if this.state}}-->
+<!--                                        <td><a href="#" class="btn btn-success">Đang rảnh</a></td>-->
+<!--                                    {{else}}-->
+<!--                                        <td><a href="#" class="btn btn-danger">Đang bận</a></td>{{/if}}-->
+                                </tr>
 
-{{/each}}
-                        </tbody>
+                            {{/each}}
+                            </tbody>
                         </table>
                         <!-- End Table with stripped rows -->
 
