--- a/views/add_devices.hbs
+++ b/views/add_devices.hbs
@@ -176,8 +176,8 @@
                         </div>
                     </div>
                     <select name="namedevice" class="form-select" aria-label="Default select example">
-                        <option value="Thiết bị đo nhịp tim" selected name="namedevice">Thiết bị đo nhịp tim</option>
-                        <option value="Thiết bị thở" name="namedevice">Thiết bị thở</option>
+                        <option value="TBD" selected name="namedevice">Thiết bị đo</option>
+                        <option value="TBT" name="namedevice">Thiết bị thở</option>
                     </select>
                     <div class="text-center">
                         <button type="submit" class="btn btn-primary">Thêm</button>
