--- a/views/profile.hbs
+++ b/views/profile.hbs
@@ -483,8 +483,8 @@
                                         <h5 class="card-title">Cập nhật tình trạng của bệnh nhân</h5>
 
                                         <a type="button" class="btn btn-primary"
-                                           href="/updateStatusPatient2/{{patient._id  }}">Đã khỏi bệnh</a>
-                                        <a type="button" href="/updateStatusPatient1/{{patient._id  }}"
+                                           href="/updateStatusPatient2/{{patient._id}}/{{patient.key_device}}">Đã khỏi bệnh</a>
+                                        <a type="button" href="/updateStatusPatient1/{{patient._id}}/{{patient.key_device}}"
                                            class="btn btn-secondary">Tử Vong</a>
 
 
