--- a/views/login.hbs
+++ b/views/login.hbs
@@ -141,30 +141,19 @@
 <!--</html>-->
 <!DOCTYPE html>
 <html lang="en">
+
 <head>
     <meta charset="UTF-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>LOGIN</title>
-    <link
-            href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/5.15.1/css/all.min.css"
-            rel="stylesheet"
-    />
+    <link href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/5.15.1/css/all.min.css" rel="stylesheet" />
     <!-- Google Fonts -->
-    <link
-            href="https://fonts.googleapis.com/css?family=Roboto:300,400,500,700&display=swap"
-            rel="stylesheet"
-    />
+    <link href="https://fonts.googleapis.com/css?family=Roboto:300,400,500,700&display=swap" rel="stylesheet" />
     <!-- MDB -->
-    <link
-            href="https://cdnjs.cloudflare.com/ajax/libs/mdb-ui-kit/3.10.1/mdb.min.css"
-            rel="stylesheet"
-    />
+    <link href="https://cdnjs.cloudflare.com/ajax/libs/mdb-ui-kit/3.10.1/mdb.min.css" rel="stylesheet" />
     <!-- MDB -->
-    <script
-            type="text/javascript"
-            src="https://cdnjs.cloudflare.com/ajax/libs/mdb-ui-kit/3.10.1/mdb.min.js"
-    ></script>
+    <script type="text/javascript" src="https://cdnjs.cloudflare.com/ajax/libs/mdb-ui-kit/3.10.1/mdb.min.js"></script>
     <style>
         .divider:after,
         .divider:before {
@@ -173,9 +162,11 @@
             height: 1px;
             background: #eee;
         }
+
         .h-custom {
             height: calc(100% - 73px);
         }
+
         @media (max-width: 450px) {
             .h-custom {
                 height: 100%;
@@ -183,85 +174,84 @@
         }
     </style>
 </head>
+
 <body>
-<section class="vh-100">
-    <div class="container-fluid h-custom">
-        <div class="row d-flex justify-content-center align-items-center h-100">
-            <div class="col-md-9 col-lg-6 col-xl-5">
-                <img src="https://preview.colorlib.com/theme/medico/img/xbanner_img.png.pagespeed.ic.MLXiW6RElW.webp" class="img-fluid"
-                     alt="Sample image">
-            </div>
-            <div class="col-md-8 col-lg-6 col-xl-4 offset-xl-1">
-                <form class="row g-3 needs-validation" method="post" action="/login">
-                    <div class="d-flex flex-row align-items-center justify-content-center justify-content-lg-start">
-                        <p class="lead fw-bold mb-0 me-3 fs-1">Đăng nhập bằng tài khoản của bạn</p>
+    <section class="vh-100">
+        <div class="container-fluid h-custom">
+            <div class="row d-flex justify-content-center align-items-center h-100">
+                <div class="col-md-9 col-lg-6 col-xl-5">
+                    <img src="https://cdn-icons-png.flaticon.com/512/2302/2302715.png" class="img-fluid"
+                        alt="Sample image">
+                </div>
+                <div class="col-md-8 col-lg-6 col-xl-4 offset-xl-1">
+                    <form class="row g-3 needs-validation" method="post" action="/login">
+                        <div class="d-flex flex-row align-items-center justify-content-center justify-content-lg-start">
+                            <p class="lead fw-bold mb-0 me-3 fs-1">Đăng nhập bằng tài khoản của người quản lý</p>
 
-                    </div>
+                        </div>
 
-                    <div class="divider d-flex align-items-center my-4">
-                        <p class="text-center fw-bold mx-3 mb-0">Or</p>
-                    </div>
+                        <!-- Email input -->
+                        <div class="form-outline mb-4">
+                            <input type="text" name="username" id="form3Example3"
+                                class="form-control form-control-lg border border-1"
+                                placeholder="Enter a valid email address" />
+                            <label class="form-label" for="form3Example3">Tên tài khoản</label>
+                        </div>
 
-                    <!-- Email input -->
-                    <div class="form-outline mb-4">
-                        <input type="text"  name="username" id="form3Example3" class="form-control form-control-lg border border-1"
-                               placeholder="Enter a valid email address" />
-                        <label class="form-label"  for="form3Example3">Tên tài khoản</label>
-                    </div>
+                        <!-- Password input -->
+                        <div class="form-outline mb-3">
+                            <input type="password" id="form3Example4" name="password"
+                                class="form-control form-control-lg border border-1" placeholder="Enter password" />
+                            <label class="form-label" for="form3Example4">Mật khẩu</label>
+                        </div>
+                        {{# if success }}
+                        <section class="success">
+                            <h2> </h2>
+                        </section>
+                        {{ else }}
+                        {{# if errors }}
+                        <section class="errors">
+                            <ul>
+                                {{# each errors }}
+                                <li class="alert alert-danger">{{ this.msg }}</li>
+                                {{/each}}
+                            </ul>
+                        </section>
+                        {{/if}}
+                        {{/if}}
+                        <!--                    <div class="d-flex justify-content-between align-items-center">-->
+                        <!--                        &lt;!&ndash; Checkbox &ndash;&gt;-->
+                        <!--                        <div class="form-check mb-0">-->
+                        <!--                            <input class="form-check-input me-2" type="checkbox" value="" id="form2Example3" />-->
+                        <!--                            <label class="form-check-label" for="form2Example3">-->
+                        <!--                                Remember me-->
+                        <!--                            </label>-->
+                        <!--                        </div>-->
+                        <!--                        <a href="#!" class="text-body">Forgot password?</a>-->
+                        <!--                    </div>-->
 
-                    <!-- Password input -->
-                    <div class="form-outline mb-3">
-                        <input type="password" id="form3Example4" name="password" class="form-control form-control-lg border border-1"
-                               placeholder="Enter password" />
-                        <label class="form-label" for="form3Example4">Mật khẩu</label>
-                    </div>
-                                                            {{# if success }}
-                                                            <section class="success">
-                                                                <h2> </h2>
-                                                            </section>
-                                                            {{ else }}
-                                                                {{# if errors }}
-                                                                    <section class="errors">
-                                                                        <ul>
-                                                                                {{# each errors }}
-                                                                                    <li class="alert alert-danger">{{ this.msg }}</li>
-                                                                                    {{/each}}
-                                                                        </ul>
-                                                                    </section>
-                                                                    {{/if}}
-                                                            {{/if}}
-<!--                    <div class="d-flex justify-content-between align-items-center">-->
-<!--                        &lt;!&ndash; Checkbox &ndash;&gt;-->
-<!--                        <div class="form-check mb-0">-->
-<!--                            <input class="form-check-input me-2" type="checkbox" value="" id="form2Example3" />-->
-<!--                            <label class="form-check-label" for="form2Example3">-->
-<!--                                Remember me-->
-<!--                            </label>-->
-<!--                        </div>-->
-<!--                        <a href="#!" class="text-body">Forgot password?</a>-->
-<!--                    </div>-->
-
-                    <div class="text-center text-lg-start mt-4 pt-2">
-                        <button type="submit" class="btn btn-primary btn-lg"
+                        <div class="text-center text-lg-start mt-4 pt-2">
+                            <button type="submit" class="btn btn-primary btn-lg"
                                 style="padding-left: 2.5rem; padding-right: 2.5rem;">Đăng nhập</button>
-<!--                        <p class="small fw-bold mt-2 pt-1 mb-0">Don't have an account? <a href="#!"-->
-<!--                                                                                          class="link-danger">Register</a></p>-->
-                    </div>
+                            <!--                        <p class="small fw-bold mt-2 pt-1 mb-0">Don't have an account? <a href="#!"-->
+                            <!--                                                                                          class="link-danger">Register</a></p>-->
+                        </div>
 
-                </form>
+                    </form>
+                </div>
             </div>
         </div>
-    </div>
-<!--    <div class="d-flex flex-column flex-md-row text-center text-md-start justify-content-between py-4 px-4 px-xl-5 bg-primary">-->
-<!--        &lt;!&ndash; Copyright &ndash;&gt;-->
-<!--        <div class="text-white mb-3 mb-md-0">-->
-<!--            Copyright © 2021. All rights reserved.-->
-<!--        </div>-->
-<!--        &lt;!&ndash; Copyright &ndash;&gt;-->
+        <!--    <div class="d-flex flex-column flex-md-row text-center text-md-start justify-content-between py-4 px-4 px-xl-5 bg-primary">-->
+        <!--        &lt;!&ndash; Copyright &ndash;&gt;-->
+        <!--        <div class="text-white mb-3 mb-md-0">-->
+        <!--            Copyright © 2021. All rights reserved.-->
+        <!--        </div>-->
+        <!--        &lt;!&ndash; Copyright &ndash;&gt;-->
 
-<!--        &lt;!&ndash; Right &ndash;&gt;-->
-<!--        &lt;!&ndash; Right &ndash;&gt;-->
-<!--    </div>-->
-</section>
+        <!--        &lt;!&ndash; Right &ndash;&gt;-->
+        <!--        &lt;!&ndash; Right &ndash;&gt;-->
+        <!--    </div>-->
+    </section>
 </body>
+
 </html>
